package.json: Add a `format-check` script
The `format-check` script lists files which need formatting according to
`prettier-eslint`. Most importantly, it exits with code 0 or 1 depending
on whether there are any such files. This will be useful for CI.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "repository": "energomonitor/energomonitor-js",
     "scripts": {
         "format": "prettier-eslint --write \"{__tests__,src}/**/*.js\"",
+        "format-check": "prettier-eslint --list-different \"{__tests__,src}/**/*.js\"",
         "test": "jest",
         "test-coverage": "jest --coverage",
         "test-verbose": "jest --verbose",
