--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           paths:
             - node_modules
           key: v1-node-modules-node-8{{ checksum "package-lock.json" }}
+      - run: npm run format-check
       - run: npm run test
 
   build-node-9:
@@ -33,6 +34,7 @@ jobs:
           paths:
             - node_modules
           key: v1-node-modules-node-9{{ checksum "package-lock.json" }}
+      - run: npm run format-check
       - run: npm run test
 
 workflows:
