--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-node-modules-node-8{{ checksum "package-lock.json" }}
+          - v1-node-modules-node-8-{{ checksum "package-lock.json" }}
           - v1-node-modules-node-8
       - run:
           name: Install dependencies
@@ -16,7 +16,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-node-modules-node-8{{ checksum "package-lock.json" }}
+          key: v1-node-modules-node-8-{{ checksum "package-lock.json" }}
       - run:
           name: Check code formatting
           command: npm run format-check
@@ -31,7 +31,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-node-modules-node-9{{ checksum "package-lock.json" }}
+          - v1-node-modules-node-9-{{ checksum "package-lock.json" }}
           - v1-node-modules-node-9
       - run:
           name: Install dependencies
@@ -39,7 +39,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-node-modules-node-9{{ checksum "package-lock.json" }}
+          key: v1-node-modules-node-9-{{ checksum "package-lock.json" }}
       - run:
           name: Check code formatting
           command: npm run format-check
