--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
           name: Check code formatting
           command: npm run format-check
       - run:
+          name: Lint code
+          command: npm run lint
+      - run:
           name: Run tests
           command: npm run test
 
@@ -43,6 +46,9 @@ jobs:
       - run:
           name: Check code formatting
           command: npm run format-check
+      - run:
+          name: Lint code
+          command: npm run lint
       - run:
           name: Run tests
           command: npm run test
