--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     ],
     "files": [
         "__tests__",
-        "src",
-        "index.js"
+        "index.js",
+        "src"
     ],
     "repository": "energomonitor/energomonitor-js",
     "scripts": {
