--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
   "parserOptions": {
     "ecmaVersion": 2017
   },
-  "extends": ["prettier"]
+  "extends": ["eslint:recommended", "prettier"],
+  "env": {
+    "es6": true
+  }
 }
