--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 on: push
 
 jobs:
-  build:
-    name: Build with Node.js ${{ matrix.node-version }}
+  check:
+    name: Check with Node.js ${{ matrix.node-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
