.github/workflows: Replace `npm install` by `npm ci` where possible
The `npm ci` command is recommended for installing dependencies in CI
environment for a variety of reasons (see its documentation).

The command deletes `node_modules` if present to ensure a clean install,
so its cache is removed.

In Node.js 9, `npm install` is still used because of old `npm` version
that doesn't support `npm ci`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Cache dependencies
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-node-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+      - name: Install dependencies
+        if: matrix.node-version != '9'
+        run: npm ci
 
       - name: Install dependencies
+        if: matrix.node-version == '9'
         run: npm install
 
       - name: Check code formatting
